Initial RE chapter

--- a/abkuerzungen/acronyms.tex
+++ b/abkuerzungen/acronyms.tex
@@ -8,5 +8,6 @@
   \acro{MVP}{Minimum Viable Product}
   \acro{NLP}{Natural Language Processing}
   \acro{NLU}{Natural Language Understanding}
+  \acro{PO}{Product Owner}
   \acro{RE}{Requirements Engineering}
 \end{acronym}
