--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -51,6 +51,7 @@
 % Fettschrift laut Leitfaden 2018 S. 45
 \usepackage[singlelinecheck=false, labelfont=bf, font=bf]{caption}
 \usepackage{caption}
+\usepackage{pdfpages}
 \usepackage{enumitem}
 \usepackage{amssymb}
 \usepackage{mathptmx}
