Initial Prototyping chapter

--- a/abkuerzungen/acronyms.tex
+++ b/abkuerzungen/acronyms.tex
@@ -1,13 +1,22 @@
 
 \section*{\langde{Abkürzungsverzeichnis}\langen{List of Abbreviations}}
 
-\begin{acronym}[IEEE]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
+\begin{acronym}[GenAI]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
+  \acro{AI}{Artificial Intelligence}
   \acro{API}{Application Programming Interface}
+  \acro{CSS}{Cascading Style Sheets}
+  \acro{GenAI}{Generative AI}
+  \acro{HTML}{Hypertext Markup Language}
   \acro{IaC}{Infrastructure-as-Code}
+  \acro{ID}{Identification}
   \acro{IEEE}{Institute of Electrical and Electronics Engineers}
   \acro{MVP}{Minimum Viable Product}
   \acro{NLP}{Natural Language Processing}
   \acro{NLU}{Natural Language Understanding}
   \acro{PO}{Product Owner}
+  \acro{PSA}{Privacy Security Assessment}
   \acro{RE}{Requirements Engineering}
+  \acro{SCSS}{Sassy Cascading Style Sheets}
+  \acro{SSO}{Single Sign-On}
+  \acro{TS}{TypeScript}
 \end{acronym}
